argocd-applications/media/radarr/radarr_resources/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: radarr
  ports:
    - port: 7878
      name: http
